tests/baselines/reference/tsxElementResolution20.errors.txt
file.tsx(9,1): error TS2602: JSX element implicitly has type 'any' because the global type 'JSX.Element' does not exist.


==== file.tsx (1 errors) ====
    declare namespace JSX {
        interface IntrinsicElements { obj1: { x: number }; }
    }
    
    interface Obj1 {
    	new(n: string): {};
    }
    var obj1: Obj1;
    <obj1 x={10} />; // Error (JSX.Element is implicit any)
    ~~~~~~~~~~~~~~~
!!! error TS2602: JSX element implicitly has type 'any' because the global type 'JSX.Element' does not exist.
    